load("@py_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "torrent_finished_py",
    srcs = ["torrent_finished.py"],
    visibility = ["//torrent_hook:__subpackages__"],
    deps = [
        requirement("qbittorrent-api"),
    ],
)

py_binary(
    name = "torrent_finished",
    srcs = ["torrent_finished.py"],
    visibility = ["//:__subpackages__"],
    deps = ["@py_deps//qbittorrent_api"],
)

py_library(
    name = "torrent_hook",
    srcs = [
        "__init__.py",
        "torrent_finished.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["@py_deps//qbittorrent_api"],
)
