load("@rules_python//python:defs.bzl", "py_library")
load("//tools/build_rules/api_image:api_image.bzl", "api_image")

py_library(
    name = "app",
    srcs = ["app.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//ark_nova_stats:config_py",
        "//ark_nova_stats:models_py",
        "//ark_nova_stats/api/gql:schema",
        "@py_deps//flask",
        "@py_deps//graphql_server",
    ],
)

api_image(
    name = "api_image",
    app_package = "ark_nova_stats.api.app",
    config = "//ark_nova_stats:config_py",
    docker_hub_repository = "docker.io/shaldengeki/ark-nova-stats-api",
    migrations = True,
    repo_tags = ["shaldengeki/ark-nova-stats-api:latest"],
    deps = [":app"],
)
