load("@rules_python//python:defs.bzl", "py_library")
load("//tools/build_rules/api:defs.bzl", "graphql_api_image")

py_library(
    name = "app",
    srcs = ["app.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//ark_nova_stats:config_py",
        "//ark_nova_stats/api/gql:schema",
        "@py_deps//graphql_server",
    ],
)

graphql_api_image(
    name = "api_image",
    app_package = "ark_nova_stats.api.app",
    docker_hub_repository = "docker.io/shaldengeki/ark-nova-stats-api",
    repo_tags = ["shaldengeki/ark-nova-stats-api:latest"],
    deps = [":app"],
)
