load("@rules_python//python:defs.bzl", "py_library", "py_test")

filegroup(
    name = "fixtures",
    srcs = glob(["fixtures/*"]),
    visibility = ["//ark_nova_stats:__subpackages__"],
)

py_library(
    name = "game_log",
    srcs = ["game_log.py"],
    visibility = ["//:__subpackages__"],
    deps = [":exceptions"],
)

py_test(
    name = "game_log_test",
    srcs = ["game_log_test.py"],
    data = [":fixtures"],
    deps = [
        ":exceptions",
        ":game_log",
        "@py_deps//pytest",
        "@rules_python//python/runfiles",
    ],
)

py_library(
    name = "exceptions",
    srcs = ["exceptions.py"],
    visibility = ["//:__subpackages__"],
)
