load("@rules_python//python:defs.bzl", "py_library", "py_test")

filegroup(
    name = "fixtures",
    srcs = glob(["fixtures/*"]),
    visibility = ["//ark_nova_stats:__subpackages__"],
)

py_library(
    name = "game_log",
    srcs = ["game_log.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":exceptions",
        "//ark_nova_stats/bga_log_parser/proto:game_proto_py_pb2",
        "//ark_nova_stats/bga_log_parser/proto:stats_proto_py_pb2",
    ],
)

py_test(
    name = "game_log_test",
    srcs = ["game_log_test.py"],
    data = [":fixtures"],
    deps = [
        ":exceptions",
        ":game_log",
        "@py_deps//pytest",
        "@rules_python//python/runfiles",
    ],
)

py_library(
    name = "exceptions",
    srcs = ["exceptions.py"],
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "game_ratings",
    srcs = ["game_ratings.py"],
    visibility = ["//:__subpackages__"],
    deps = [
    ],
)

py_test(
    name = "game_ratings_test",
    srcs = ["game_ratings_test.py"],
    data = [":fixtures"],
    deps = [
        ":game_ratings",
        "//ark_nova_stats/bga_log_parser/proto:ratings_proto_py_pb2",
        "@py_deps//pytest",
        "@rules_python//python/runfiles",
    ],
)
