load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "analyze_games",
    srcs = ["analyze_games.py"],
    data = ["//ark_nova_stats/emu_cup/data"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":player_elos",
        ":tables",
        "//ark_nova_stats/bga_log_parser:exceptions",
        "//ark_nova_stats/bga_log_parser:game_log",
        "//ark_nova_stats/emu_cup/analyses:elo_adjusted",
        "//ark_nova_stats/emu_cup/analyses:win_rates",
        "@rules_python//python/runfiles",
    ],
)

py_library(
    name = "player_elos",
    srcs = ["player_elos.py"],
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "tables",
    srcs = ["tables.py"],
    visibility = ["//:__subpackages__"],
)
