load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "game_server",
    srcs = ["game_server.go"],
    importpath = "github.com/shaldengeki/monorepo/ark_nova_stats/game_server",
    visibility = ["//visibility:public"],
    deps = ["//ark_nova_stats/game_server/proto:go_default_library"],
)
