load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_python//python:proto.bzl", "py_proto_library")

proto_library(
    name = "associate_proto",
    srcs = ["associate.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "build_proto",
    srcs = ["build.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "cards_proto",
    srcs = ["cards.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "display_state_proto",
    srcs = ["display_state.proto"],
    visibility = ["//visibility:public"],
    deps = [":cards_proto"],
)

proto_library(
    name = "game_state_proto",
    srcs = ["game_state.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":display_state_proto",
        ":player_game_state_proto",
    ],
)

proto_library(
    name = "player_game_state_proto",
    srcs = ["player_game_state.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":associate_proto",
        ":build_proto",
        ":cards_proto",
    ],
)

py_proto_library(
    name = "associate_proto_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":associate_proto"],
)

py_proto_library(
    name = "build_proto_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":build_proto"],
)

py_proto_library(
    name = "cards_proto_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":cards_proto"],
)

py_proto_library(
    name = "display_state_proto_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":display_state_proto"],
)

py_proto_library(
    name = "game_state_proto_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":game_state_proto"],
)

py_proto_library(
    name = "player_game_state_proto_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":player_game_state_proto"],
)

# TODO: ensure that there are go clients here
