load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "associate_proto",
    srcs = ["associate.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "build_proto",
    srcs = ["build.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "cards_proto",
    srcs = ["cards.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "display_state_proto",
    srcs = ["display_state.proto"],
    visibility = ["//visibility:public"],
    deps = [":cards_proto"],
)

proto_library(
    name = "game_state_proto",
    srcs = ["game_state.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":display_state_proto",
        ":player_game_state_proto",
    ],
)

proto_library(
    name = "player_game_state_proto",
    srcs = ["player_game_state.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":associate_proto",
        ":build_proto",
        ":cards_proto",
    ],
)

py_proto_library(
    name = "associate_proto_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":associate_proto"],
)

py_proto_library(
    name = "build_proto_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":build_proto"],
)

py_proto_library(
    name = "cards_proto_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":cards_proto"],
)

py_proto_library(
    name = "display_state_proto_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":display_state_proto"],
)

py_proto_library(
    name = "game_state_proto_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":game_state_proto"],
)

py_proto_library(
    name = "player_game_state_proto_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":player_game_state_proto"],
)

# TODO: ensure that there are go clients here

go_proto_library(
    name = "associate_proto_go_proto",
    importpath = "github.com/shaldengeki/monorepo/ark_nova_stats/proto/associate",
    proto = ":associate_proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "build_go_proto",
    importpath = "github.com/shaldengeki/monorepo/ark_nova_stats/proto/build",
    proto = ":build_proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "cards_go_proto",
    importpath = "github.com/shaldengeki/monorepo/ark_nova_stats/proto/cards",
    proto = ":cards_proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "display_state_go_proto",
    importpath = "github.com/shaldengeki/monorepo/ark_nova_stats/proto/display_state",
    proto = ":display_state_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":cards_go_proto",
    ],
)

go_proto_library(
    name = "player_game_state_go_proto",
    importpath = "github.com/shaldengeki/monorepo/ark_nova_stats/proto/player_game_state",
    proto = ":player_game_state_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":associate_proto_go_proto",
        ":build_go_proto",
        ":cards_go_proto",
    ],
)

go_proto_library(
    name = "game_state_go_proto",
    importpath = "github.com/shaldengeki/monorepo/ark_nova_stats/proto/game_state",
    proto = ":game_state_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":display_state_go_proto",
        ":player_game_state_go_proto",
    ],
)

buf_lint_test(
    name = "associate_proto_lint",
    config = "//:buf.yaml",
    targets = [":associate_proto"],
)

buf_lint_test(
    name = "build_proto_lint",
    config = "//:buf.yaml",
    targets = [":build_proto"],
)

buf_lint_test(
    name = "cards_proto_lint",
    config = "//:buf.yaml",
    targets = [":cards_proto"],
)

buf_lint_test(
    name = "display_state_proto_lint",
    config = "//:buf.yaml",
    targets = [":display_state_proto"],
)

buf_lint_test(
    name = "game_state_proto_lint",
    config = "//:buf.yaml",
    targets = [":game_state_proto"],
)

buf_lint_test(
    name = "player_game_state_proto_lint",
    config = "//:buf.yaml",
    targets = [":player_game_state_proto"],
)
