load("@py_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")
load("//tools/build_rules:api_image.bzl", "api_image")

py_library(
    name = "api_lib",
    srcs = glob(["**/*.py"]),
    imports = [".."],
    visibility = ["//fitbit_challenges/api:__subpackages__"],
    deps = [
        "//fitbit_challenges:config_py",
        "//fitbit_challenges:models_py",
        requirement("Flask"),
        requirement("Flask-Migrate"),
        requirement("graphql_server"),
    ],
)

api_image(
    name = "api_image",
    app_package = "",
    docker_hub_repository = "docker.io/shaldengeki/fitbit-challenges-api",
    env = {
        "FITBIT_CLIENT_ID": "testing",
        "FITBIT_CLIENT_SECRET": "testing",
        "FITBIT_VERIFICATION_CODE": "testing",
    },
    repo_tags = ["shaldengeki/fitbit-challenges-api:latest"],
    deps = [":api_lib"],
)
