load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("//tools/build_rules:frontend_image.bzl", "frontend_image")

copy_file(
    name = "tailwindconfig",
    src = "//react_library:tailwindconfig",
    out = "tailwind.config.js",
    visibility = ["//fitbit_challenges/frontend:__subpackages__"],
)

copy_file(
    name = "tsconfig",
    src = "//react_library:tsconfig",
    out = "tsconfig.json",
    visibility = ["//fitbit_challenges/frontend:__subpackages__"],
)

copy_to_bin(
    name = "testfixtures",
    srcs = [
        "package.json",
        "//react_library:testfixtures",
    ],
    visibility = ["//fitbit_challenges/frontend:__subpackages__"],
)

copy_to_bin(
    name = "packagejson",
    srcs = ["package.json"],
    visibility = ["//fitbit_challenges/frontend:__subpackages__"],
)

copy_file(
    name = "globalsdts",
    src = "//react_library:globalsdts",
    out = "globals.d.ts",
)

frontend_image(
    name = "production",
    srcs = glob(["public/**/*"]) + [
        "//fitbit_challenges/frontend/src:index",
        "//fitbit_challenges/frontend/src:tailwindcss",
    ],
    build_env = {
        "REACT_APP_API_HOST": "api.fitbit.ouguo.us",
        "REACT_APP_API_PORT": "443",
        "REACT_APP_API_PROTOCOL": "https",
    },
    docker_hub_repository = "docker.io/shaldengeki/fitbit-challenges-frontend",
    entry_point = "//fitbit_challenges/frontend/src:index.js",
    node_modules = "//:node_modules",
    repo_tags = ["shaldengeki/fitbit-challenges-frontend:latest"],
    server_name = "fitbit.ouguo.us",
    webpack_conf = ":webpack.config.js",
)

frontend_image(
    name = "development",
    srcs = glob(["public/**/*"]) + [
        "//fitbit_challenges/frontend/src:index",
        "//fitbit_challenges/frontend/src:tailwindcss",
    ],
    build_env = {
        "REACT_APP_API_HOST": "localhost",
        "REACT_APP_API_PORT": "5000",
        "REACT_APP_API_PROTOCOL": "http",
    },
    docker_hub_repository = "docker.io/shaldengeki/fitbit-challenges-frontend",
    entry_point = "//fitbit_challenges/frontend/src:index.js",
    node_modules = "//:node_modules",
    repo_tags = ["shaldengeki/fitbit-challenges-frontend:latest"],
    server_name = "fitbit.ouguo.us",
    webpack_conf = ":webpack.config.js",
)
