load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "bingo_card_pattern_test",
    size = "small",
    srcs = ["bingo_card_pattern_test.py"],
    deps = [
        "//fitbit_challenges:bingo_card_pattern_py",
        "@py_deps//pytest",
    ],
)

py_test(
    name = "fitbit_client_test",
    size = "small",
    srcs = ["fitbit_client_test.py"],
    deps = [
        "//fitbit_challenges:fitbit_client_py",
        "@py_deps//pytest",
        "@py_deps//requests",
    ],
)

py_test(
    name = "models_test",
    size = "small",
    srcs = ["models_test.py"],
    deps = ["//fitbit_challenges:models_py"],
)
